# AUTOSAR_demo_app

./: CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/functionaltests/: CMakeLists.txt  functionaltests.arxml
applications/functionaltests/Mocks/: ITemperatureService.h  TemperatureProviderMock.cpp  TemperatureProviderMock.h  WeatherClientMock.cpp  WeatherClientMock.h
applications/functionaltests/src/: FunctionalTestEnvironment.cpp  FunctionalTestEnvironment.h  WeatherProviderFunctionalTests.cpp  main.cpp
applications/statemanager/: CMakeLists.txt  statemanager.arxml
applications/statemanager/include/: execution_client_wrapper.h  state_client_wrapper.h
applications/statemanager/src/: execution_client_wrapper.cpp  main.cpp  state_client_wrapper.cpp
applications/temperatureprovider/: CMakeLists.txt  temperatureprovider.arxml
applications/temperatureprovider/include/: temperatureprovider.h
applications/temperatureprovider/src/: main.cpp  temperatureprovider.cpp
applications/weatherclient/: CMakeLists.txt  weatherclient.arxml
applications/weatherclient/include/: version.h  weatherclient.h
applications/weatherclient/src/: main.cpp  weatherclient.cpp
applications/weatherprovider/: CMakeLists.txt  weatherprovider.arxml
applications/weatherprovider/include/: weatherprovider.h
applications/weatherprovider/src/: main.cpp  weatherprovider.cpp
common-design/: CMakeLists.txt  EthernetClusters.arxml  ModeDeclarationGroups.arxml  SomeIpSdTimingConfigs.arxml  StartupConfigSets.arxml
deployment/: CMakeLists.txt  TemperatureServiceSomeIp_deployment_manifest.arxml  WeatherServiceSomeIp_deployment_manifest.arxml
interfaces/: CMakeLists.txt  TemperatureService.arxml  WeatherClientKvsInterface.arxml  WeatherService.arxml  types.arxml
machines/: CMakeLists.txt
machines/MainEcu/: CMakeLists.txt  machine_manifest.arxml
machines/MainEcu/processes/: CMakeLists.txt
machines/MainEcu/processes/functionaltests_instance/: CMakeLists.txt  TemperatureServiceProvided_instance_manifest.arxml  WeatherServiceRequired_instance_manifest.arxml  functionaltests_instance_execution_manifest.arxml  functionaltests_instance_mapping_manifest.arxml
machines/MainEcu/processes/statemanager_instance/: CMakeLists.txt  statemanager_instance_execution_manifest.arxml  statemanager_instance_mapping_manifest.arxml
machines/MainEcu/processes/temperatureprovider_instance/: CMakeLists.txt  TemperatureServiceProvided_instance_manifest.arxml  temperatureprovider_instance_execution_manifest.arxml  temperatureprovider_instance_mapping_manifest.arxml
machines/MainEcu/processes/weatherclient_instance/: CMakeLists.txt  TemperatureDatabase.arxml  WeatherServiceRequired_instance_manifest.arxml  weatherclient_instance_execution_manifest.arxml  weatherclient_instance_mapping_manifest.arxml
machines/MainEcu/processes/weatherclient_instance/files/: temperature_database.json
machines/MainEcu/processes/weatherprovider_instance/: CMakeLists.txt  TemperatureServiceRequired_instance_manifest.arxml  WeatherServiceProvided_instance_manifest.arxml  weatherprovider_instance_execution_manifest.arxml  weatherprovider_instance_mapping_manifest.arxml
machines/SecondaryEcu/: CMakeLists.txt  machine_manifest.arxml
machines/SecondaryEcu/processes/: CMakeLists.txt
machines/SecondaryEcu/processes/weatherclient_instance2/: CMakeLists.txt  TemperatureDatabase.arxml  WeatherServiceRequired_instance_manifest.arxml  weatherclient_instance_execution_manifest.arxml  weatherclient_instance_mapping_manifest.arxml
