# Add the directory for the applications to this list
# by copying and adjusting the following command
# add_subdirectory(<executable.ShortName>)

add_subdirectory(temperatureprovider)
add_subdirectory(weatherprovider)
add_subdirectory(weatherclient)
add_subdirectory(statemanager)
add_subdirectory(functionaltests)
