# Add the directory for the process to this list
# by copying and adjusting the following command
# add_subdirectory(<process.ShortName>)

add_subdirectory(temperatureprovider_instance)
add_subdirectory(weatherprovider_instance)
add_subdirectory(weatherclient_instance)
add_subdirectory(statemanager_instance)
add_subdirectory(functionaltests_instance)

